<resources>
    <string name="app_name">E-сапа</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_fragment_activity">Домой</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Navigation Drawer-->
    <string name="nav_home">Домой</string>
    <string name="nav_qrcode">Проверка по QRcode</string>
    <string name="nav_brandcode">Проверка по Штрих коду</string>
    <string name="nav_smoking">Проверка Табачной продукций</string>
    <string name="nav_alcohol">Проверка Алкогольной продукций</string>
    <string name="nav_exit">Выход</string>
    <string name="nav_history">История</string>
    <string name="nav_SectionDrawerItemValidate">Проверка Продукта</string>
    <string name="nav_SectionDrawerItemHistory">История проверок</string>

    <!--Alcohol fragment-->
    <string name="alco_text_info_1">Услуги проверки действия для алкогольной продукции акцизной маркий</string>
    <string name="alco_text_info_2">Серия штрих кода (2 кириллические символы)</string>
    <string name="alco_part1">1 часть кода</string>
    <string name="alco_part2">2 часть кода</string>
    <string name="alco_part3">3 часть кода</string>
    <string name="alco_text_info_3">Какой код на рисунке?*</string>
    <string name="alco_text_info_4">Введите буквы, показанные на изображении.</string>
    <string name="alco_text_info_5">Загрузка...</string>
    <string name="alco_text_info_6">Загружаем Рисунок для ввода </string>
    <string name="alco_title">Алкоголь</string>


<!--Login Fragment-->
    <string name="username">Login</string>
    <string name="password">Password</string>
    <!--Tabacco fragments-->

    <string name="tabac_textInfo_1">Проверка учета и контроля марок на алкогольную продукцию</string>
    <string name="tabac_textInfo_2">* (код расположен в нижней части пачки сигарет. Код состоит из 12 символов, а именно, 4 части по 3 символов)</string>
    <string name="tabac_textInfo_3">Хотите собщить о контрафактном товаре?</string>
    <string name="tabac_textInfo_4">Сообщить о контрафакте Госорганам. они че нить точно сделают</string>
    <string name="tabac_textInfo_5">Не сообщать</string>
    <string name="tabac_textInfo_6">Сообщить</string>
    <string name="tabac_textInfo_7">Перейти в настройки сети ? </string>
    <string name="tabac_textInfo_8">Перейти в настройки сети</string>
    <string name="tabac_textInfo_9">Подключите Интернет</string>
    <string name="tabac_textInfo_10">Товар не прошел проверку на соответствие.\n Возможно, введенный вами Штрих код содержит отпечатку.\n Если вы уверены что ввели его правильно просьба отправить нам уведомление.</string>

    <string name="tabac_title">Табак</string>

    <string name="tabac_part1">1 часть кода</string>
    <string name="tabac_part2">2 часть кода</string>
    <string name="tabac_part3">3 часть кода</string>
    <string name="tabac_part4">4 часть кода</string>

    <!--Common strings-->
    <string name="comm_btn_find">Проверить</string>
    <string name="comm_text_CANCEL">Проверить</string>
    <string name="comm_text_SEND">Отправить</string>
    <string name="comm_no_gps">Подключите GPS </string>
    <string name="comm_no_choose_city">Не был выбран Город</string>
    <string name="comm_ok">Ok</string>
    <string name="comm_wait">Подождите, Идет проверка введенных данных</string>

    <!--Common array-->
    <array name="common_array_1">
        <item>Город</item>
        <item>Компания</item>
        <item>Продукт</item>
        <item>Этикетка</item>
        <item>Литр</item>
        <item>Дата Производства</item>
        <item>Дата Годности</item>
    </array>

    <string-array name="tabac_city">
        <item>Выберите город</item>
        <item>Актау</item>
        <item>Актобе</item>
        <item>Атырау</item>
        <item>Алматы</item>
        <item>Астана</item>
        <item>Караганда</item>
        <item>Кокшетау</item>
        <item>Костанай</item>
        <item>Кызылорда</item>
        <item>Павлодар</item>
        <item>етропавлск</item>
        <item>Талдыкорган</item>
        <item>Тараз</item>
        <item>Уральск</item>
        <item>Уст-Каменагорск</item>
        <item>Шимкен</item>
        <item>Семипалатинск</item>
        <item>Туркистан</item>
        <item>Екибастуз</item>
        <item>Рудный</item>
        <item>Жанаозен</item>
        <item>Темиртау</item>
        <item>Жесказган</item>
        <item>Балхаш</item>
        <item>Кентау</item>
    </string-array>

    <!--Setting fragment-->

    <string name="set_info_1">Выберите тему</string>
    <string name="set_info_2">Настройки</string>
    <string name="set_info_3">Настройки</string>
    <string name="set_info_4">Выберите язык</string>

    <!--History fragment-->

    <string name="history_info_1">Выберите Штрих код</string>
    <string name="history_info_2">Штрих Код</string>
    <string name="history_info_3">Результат запроса</string>
    <string name="history_info_4">Информация о продукте</string>
    <string name="history_info_5">Очистить всю карту</string>
    <string name="history_info_6">Поставить все точки сканирования</string>
    <string name="history_info_7">Положительная</string>
    <string name="history_info_8">Отрицательная</string>
    <string name="history_info_9">Нажмите сюда</string>
    <string name="history_info_title">История</string>
    <string name="history_info_10">Выберите запись что бы посмотреть на карте</string>


    <!--Setting fragment-->
    <array name="setting_lang">
        <item>Казахский</item>
        <item>Русский</item>
        <item>Англииский</item>
    </array>

    <array name="setting_theme">
        <item>Тема 1</item>
        <item>Тема 2</item>
        <item>Тема 3</item>
        <item>Тема 4</item>
        <item>Тема 5</item>
        <item>Тема 6</item>
        <item>Тема 7</item>
        <item>Тема 8</item>
        <item>Тема 9</item>
    </array>

    <!--Send request fragment-->
    <string name="srf_text_info_1">Окно отправки уведомления</string>
    <string name="srf_text_info_2">Отправить</string>
    <string name="srf_text_info_3">Контактное Имя</string>
    <string name="srf_text_info_4">Контактный номер</string>
    <string name="srf_text_info_5">Электронная почта</string>
    <string name="srf_text_info_6">Расположение</string>
    <string name="srf_text_info_7">Описание</string>
    <string name="srf_text_info_8">Успешно</string>
    <string name="srf_text_info_9">Мы зарегистрировали вашу заявку</string>
    <string name="srf_text_info_10">Штрих код</string>

    <!--Show result-->

    <string name="show_text_info_1">Результат Запроса</string>
    <string name="show_text_info_2">Повторная проверка</string>
    <string name="show_text_info_3">Результат Проверки</string>


    <string name="title_activity_scanner_actv">scanner_actv</string>
    <string name="scan_process_label">Сканирование...</string>
    <string name="scan_result_label">result</string>


    <string name="comm_BrandDescription">BrandDescription</string>
    <string name="comm_BrandCode">BrandCode</string>
    <string name="comm_BatchStatus">BatchStatus</string>
    <string name="comm_StartDate">StartDate</string>



    <string name="home_text_info_1">Ваше неотъемлемое право вне зависимости</string>
    <string name="home_text_info_2">Внезависимости  от вашего местонахождения</string>
    <string name="home_text_info_3">Проверьте уникальный код на бутылке</string>
    <string name="home_text_info_7">Так же вы можете проверить подлинность на сайте www.e-sapa.kz</string>
    <string name="home_text_info_4">Пример проверки товара на сайте www.e-sapa.kz</string>
    <string name="home_text_info_5">Вы должны быть уверены в качестве купленного товара</string>
    <string name="home_text_info_8">Проверка с помощью мобильного приложения E-сапа</string>
    <string name="home_text_info_6">Посетите портал www.E-sapa.kz</string>
    <string name="home_title">Главная</string>

    <!--Positive Fragment-->
    <string name="positive_fragment">Наименование региона производства продукции</string>
    <string name="positive_fragment_1">Организация</string>
    <string name="positive_fragment_2">Группа продуктов</string>
    <string name="positive_fragment_3">Сокращенное наименование продукта</string>
    <string name="positive_fragment_4">Емкость тары (бутылки), л</string>
    <string name="positive_fragment_5">Дата печати марки</string>
    <string name="positive_fragment_6">Дата розлива</string>
    <string name="comm_map_title">Карта</string>
    <string name="comm_map_close">Закрыть карту</string>
</resources>
