<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SendrequestLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="aonit.ex2dcode.SendRequestActivity.SendRequestForReviewActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <TextView
                android:id="@+id/TextPuidType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/ET_inserting_text_color"
                android:textColorHint="@color/ET_divider_color"
                android:gravity="center"
                android:layout_below="@+id/textView11"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp" />


        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/editText6"
            android:layout_below="@+id/editText5"
            android:layout_alignParentLeft="true">
            <EditText
                android:id="@+id/TextLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/srf_text_info_7"
                android:inputType="textPersonName"
                android:textColor="@color/ET_inserting_text_color"
                android:textColorHint="@color/ET_divider_color"
                android:layout_above="@+id/TextPuidType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/editText5"
            android:layout_below="@+id/editText2"
            android:layout_alignParentLeft="true">
            <EditText
                android:id="@+id/TextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/srf_text_info_6"
                android:inputType="textPersonName"
                android:textColor="@color/ET_inserting_text_color"
                android:textColorHint="@color/ET_divider_color"
                android:layout_above="@+id/TextLocation"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/editText4"
            android:layout_below="@+id/editText3"
            android:layout_alignParentLeft="true">
            <EditText
                android:id="@+id/TextDescription1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/srf_text_info_5"
                android:inputType="textEmailAddress"
                android:textColor="@color/ET_inserting_text_color"
                android:textColorHint="@color/ET_divider_color"
                android:layout_above="@+id/TextEmail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/TextContactPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/srf_text_info_4"
                android:inputType="phone"
                android:textColor="@color/ET_inserting_text_color"
                android:textColorHint="@color/ET_divider_color"
                android:layout_above="@+id/TextDescription1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText4"
            android:layout_alignParentLeft="true">
            <EditText
                android:id="@+id/TextContactName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/srf_text_info_3"
                android:inputType="textPersonName"
                android:textColor="@color/ET_inserting_text_color"
                android:textColorHint="@color/ET_divider_color"
                android:layout_above="@+id/TextContactPhone"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/ET_divider_color"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/srf_text_info_10"
            android:id="@+id/textView11"
            android:layout_below="@+id/editText6"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
