<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.e_sapa_ver_3_00.Fragments.tabacco">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/tabac_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            >


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView3"
                android:orientation="vertical"
                android:gravity="center">

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tabac_part1t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/tabac_part1"
                        android:maxLength="3"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/ET_inserting_text_color"
                        android:textColorHint="@color/ET_divider_color"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:inputType="textPersonName"/>
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tabac_part2t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/tabac_part2"
                        android:maxLength="3"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/ET_inserting_text_color"
                        android:textColorHint="@color/ET_divider_color"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:inputType="text|textPersonName" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tabac_part3t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/tabac_part3"
                        android:maxLength="3"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/ET_inserting_text_color"
                        android:textColorHint="@color/ET_divider_color"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:textIsSelectable="false"
                        android:inputType="textPersonName"/>
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tabac_part4t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/tabac_part4"
                        android:maxLength="3"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/ET_inserting_text_color"
                        android:textColorHint="@color/ET_divider_color"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:textIsSelectable="false"
                        android:inputType="textPersonName"/>
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/barcode" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout2"
                android:layout_margin="10dp"
                android:text="@string/tabac_textInfo_2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TF_color"
                android:textSize="@dimen/abc_text_size_small_material" />

            <com.rey.material.widget.Button
                android:id="@+id/tabac_sendrequest_btn"
                style="Material.Drawable.Ripple.Touch.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/comm_btn_find"
                android:textColor="@color/BTN_text_color"
                app:rd_enable="true"
                app:rd_rippleType="wave"
                android:layout_below="@+id/textView4"
                android:textSize="@dimen/abc_text_size_medium_material" />


        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
